--- a/iRacing Deltabar Service/ServiceRunnerApp/App.xaml
+++ b/iRacing Deltabar Service/ServiceRunnerApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ServiceRunnerApp"
-             StartupUri="MainWindow.xaml">
+             Startup="AppStarted">
     <Application.Resources>
          
     </Application.Resources>
