--- a/iRacing Deltabar Service/ServiceRunnerApp/App.xaml
+++ b/iRacing Deltabar Service/ServiceRunnerApp/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ServiceRunnerApp"
+			 ShutdownMode="OnExplicitShutdown"
              Startup="AppStarted">
     <Application.Resources>
-         
-    </Application.Resources>
+		<ResourceDictionary Source="NotifyIconResources.xaml"/>
+	</Application.Resources>
 </Application>
